--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <link rel="stylesheet" href="css/styles.css?v=1.0">
 </head>
 <body class="background" style="background-image: url(images/bg.jpg);">
-
+<br>
 <div class="container">
-  <div class="jumbotron" style="background-image: url(images/header.jpg);">
+  <div class="jumbotron" style="background-image: url(images/pic.jpg);">
     <h1 style="color: whitesmoke;">Happy's Blog</h1>      
     <p style="color: whitesmoke;">The Best Blog About Latest Trends In Technology</p>
   </div>
